deploy: a1e3fa73959b6a0073e33bf7802886c5bbaf5976

--- a/modules.html
+++ b/modules.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat package" href="copyxnat.html" />
-    <link rel="prev" title="CopyXnat" href="index.html" /> 
+    <link rel="prev" title="API reference" href="index.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.html" title="copyxnat package"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="CopyXnat"
+          <a href="index.html" title="API reference"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">copyxnat</a></li> 
@@ -132,7 +132,7 @@
             </a></p>
   <h4>Previous topic</h4>
   <p class="topless"><a href="index.html"
-                        title="previous chapter">CopyXnat</a></p>
+                        title="previous chapter">API reference</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.html"
                         title="next chapter">copyxnat package</a></p>
@@ -170,7 +170,7 @@
           <a href="copyxnat.html" title="copyxnat package"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="CopyXnat"
+          <a href="index.html" title="API reference"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">copyxnat</a></li> 
