--- a/genindex.html
+++ b/genindex.html
@@ -66,6 +66,10 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">add_tag_remaps() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTR_SECONDARY_PROJECT_ID">ATTR_SECONDARY_PROJECT_ID (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
@@ -78,7 +82,13 @@
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.check_datatypes_tostring">check_datatypes_tostring() (in module copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">clean() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.clean">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.clean">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.command_factory">command_factory() (in module copyxnat.xnat.commands)</a>
@@ -348,6 +358,8 @@
 </li>
       <li><a href="versioneer.html#versioneer.get_config_from_root">get_config_from_root() (in module versioneer)</a>
 </li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.get_disallowed_project_ids">get_disallowed_project_ids() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject static method)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.get_experiments">get_experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.get_keywords">get_keywords() (in module copyxnat.utils.versioneer_version)</a>
@@ -443,6 +455,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">main() (in module copyxnat.ui.copyxnat_command_line)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.message">message() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
@@ -759,6 +773,8 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PREARCHIVE_PATH_TAG">XNAT_PREARCHIVE_PATH_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PROJECT_ID_ATTR">XNAT_PROJECT_ID_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PROJECT_NAME_TAG">XNAT_PROJECT_NAME_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_RESOURCES_TAG">XNAT_RESOURCES_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
