--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -156,8 +156,9 @@
 <span class="sd">        Make a copy of this item on a different server, if it doesn&#39;t already</span>
 <span class="sd">        exist, and return an XnatItem interface to the duplicate item.</span>
 
-<span class="sd">        :dst_label: label for destination object, or None to use source label</span>
 <span class="sd">        :destination_parent: parent XnatItem under which to make the duplicate</span>
+<span class="sd">        :fix_scan_types: If True then ambiguous scan types will be corrected</span>
+<span class="sd">        :dst_label: label for destination object, or None to use source label</span>
 <span class="sd">        :return: a new XnatItem corresponding to the duplicate item</span>
 <span class="sd">        &quot;&quot;&quot;</span></div>
 
@@ -272,15 +273,16 @@
         <span class="c1"># Make sure we make a copy, as we need to preserve the original</span>
         <span class="n">cleaned_xml_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_xml</span><span class="p">()</span>
 
-        <span class="n">cleaned_xml_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span>
-            <span class="n">xml_root</span><span class="o">=</span><span class="n">cleaned_xml_root</span><span class="p">,</span>
-            <span class="n">attr_to_tag_map</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
-            <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">)</span>
+        <span class="n">label</span> <span class="o">=</span> <span class="n">dst_label</span> <span class="ow">or</span> <span class="bp">self</span><span class="o">.</span><span class="n">label</span>
+
+        <span class="n">cleaned_xml_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span><span class="n">xml_root</span><span class="o">=</span><span class="n">cleaned_xml_root</span><span class="p">,</span>
+                                      <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">,</span>
+                                      <span class="n">destination_parent</span><span class="o">=</span><span class="n">destination_parent</span><span class="p">,</span>
+                                      <span class="n">label</span><span class="o">=</span><span class="n">label</span><span class="p">)</span>
 
         <span class="n">local_file</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">write_xml</span><span class="p">(</span>
             <span class="n">cleaned_xml_root</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_xml_filename</span><span class="p">)</span>  <span class="c1"># pylint: disable=no-member</span>
 
-        <span class="n">label</span> <span class="o">=</span> <span class="n">dst_label</span> <span class="ow">or</span> <span class="bp">self</span><span class="o">.</span><span class="n">label</span>
         <span class="n">output</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_or_create_child</span><span class="p">(</span>
             <span class="n">parent</span><span class="o">=</span><span class="n">destination_parent</span><span class="p">,</span>
             <span class="n">label</span><span class="o">=</span><span class="n">label</span><span class="p">,</span>
@@ -297,6 +299,22 @@
                                         <span class="n">final_xml_root</span><span class="p">,</span>
                                         <span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">)</span>  <span class="c1"># pylint: disable=no-member</span>
         <span class="k">return</span> <span class="n">output</span></div>
+
+<div class="viewcode-block" id="XnatParentItem.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">,</span> <span class="n">destination_parent</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>  <span class="c1"># pylint: disable=unused-argument</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Modify XML values for items copied between XNAT projects, to allow</span>
+<span class="sd">        for changes in unique identifiers.</span>
+
+<span class="sd">        :xml_root: parent XML node for the xml contents to be modified</span>
+<span class="sd">        :fix_scan_types: if True then ambiguous scan types will be corrected</span>
+<span class="sd">        :destination_parent: parent XnatItem under which to make the duplicate</span>
+<span class="sd">        :label: label for destination object</span>
+<span class="sd">        :return: the modified xml_root</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span>
+            <span class="n">xml_root</span><span class="o">=</span><span class="n">xml_root</span><span class="p">,</span>
+            <span class="n">attr_to_tag_map</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
+            <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="XnatParentItem.export"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.export">[docs]</a>    <span class="k">def</span> <span class="nf">export</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">src_xml_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_xml</span><span class="p">()</span>
@@ -318,7 +336,22 @@
                                 <span class="n">read_only</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">read_only</span><span class="p">,</span>
                                 <span class="n">xml_cleaner</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="p">)</span>
                     <span class="k">for</span> <span class="n">subject</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">subjects</span><span class="p">()]</span>
-        <span class="k">return</span> <span class="n">subjects</span></div></div>
+        <span class="k">return</span> <span class="n">subjects</span></div>
+
+<div class="viewcode-block" id="XnatProject.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">,</span> <span class="n">destination_parent</span><span class="p">,</span>
+              <span class="n">label</span><span class="p">):</span>
+        <span class="n">disallowed</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">get_disallowed_project_ids</span><span class="p">(</span>
+            <span class="n">server</span><span class="o">=</span><span class="n">destination_parent</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="n">label</span><span class="p">)</span>
+        <span class="n">cleaned_xml_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">make_project_names_unique</span><span class="p">(</span>
+            <span class="n">xml_root</span><span class="o">=</span><span class="n">xml_root</span><span class="p">,</span>
+            <span class="n">disallowed_ids</span><span class="o">=</span><span class="n">disallowed</span><span class="p">[</span><span class="s2">&quot;secondary_ids&quot;</span><span class="p">],</span>
+            <span class="n">disallowed_names</span><span class="o">=</span><span class="n">disallowed</span><span class="p">[</span><span class="s2">&quot;names&quot;</span><span class="p">]</span>
+        <span class="p">)</span>
+
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span>
+            <span class="n">xml_root</span><span class="o">=</span><span class="n">cleaned_xml_root</span><span class="p">,</span>
+            <span class="n">attr_to_tag_map</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
+            <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">)</span></div></div>
 
 
 <div class="viewcode-block" id="XnatSubject"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject">[docs]</a><span class="k">class</span> <span class="nc">XnatSubject</span><span class="p">(</span><span class="n">XnatParentItem</span><span class="p">):</span>
