deploy: 0c944a94a970c1b0512682fe17398760706cc282

--- a/genindex.html
+++ b/genindex.html
@@ -65,9 +65,15 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">add_tag_remaps() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.assessor">assessor (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ASSESSOR_ID_MAP">ASSESSOR_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTR_SECONDARY_PROJECT_ID">ATTR_SECONDARY_PROJECT_ID (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTRS_TO_REMAP">ATTRS_TO_REMAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -288,6 +294,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.experiment">experiment (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.export">export() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 
       <ul>
@@ -378,6 +386,8 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.get_scans">get_scans() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.get_tags_to_remap">get_tags_to_remap() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
+</li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version">get_version() (in module copyxnat.utils.versioning)</a>
 
       <ul>
@@ -423,10 +433,6 @@
 
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ICR_SUBJECT_ID_TAG">ICR_SUBJECT_ID_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.info">info() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
@@ -531,12 +537,16 @@
         <li><a href="versioneer.html#versioneer.plus_or_dot">(in module versioneer)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.project">project (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.project">project() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
       <ul>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.PROJECT_ID_MAP">PROJECT_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.project_list">project_list() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
       <ul>
@@ -547,10 +557,10 @@
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment">PyXnatExperiment (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem">PyXnatItem (class in copyxnat.xnat_backend.pyxnat_server)</a>
@@ -575,6 +585,10 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.reconstruction">reconstruction (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.RECONSTRUCTION_ID_MAP">RECONSTRUCTION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.register_vcs_handler">register_vcs_handler() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -627,6 +641,8 @@
       </ul></li>
       <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.resolve_projects">resolve_projects() (in module copyxnat.xnat.run_command)</a>
 </li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.resource">resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">run_command() (in module copyxnat.utils.versioneer_version)</a>
@@ -649,9 +665,15 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource.save_file">save_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatResource method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.scan">scan (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SCAN_ID_MAP">SCAN_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="versioneer.html#versioneer.scan_setup_py">scan_setup_py() (in module versioneer)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -660,6 +682,10 @@
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.start_progress">start_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.sub_cache">sub_cache() (copyxnat.xnat.copy_cache.CopyCache method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.subject">subject (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SUBJECT_ID_MAP">SUBJECT_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.subjects">subjects() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject method)</a>
 </li>
@@ -746,51 +772,13 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner">XmlCleaner (class in copyxnat.xnat.xml_cleaner)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_ASSESSOR_LABEL_ATTR">XNAT_ASSESSOR_LABEL_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_ASSESSOR_PROJECT_ATTR">XNAT_ASSESSOR_PROJECT_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_ASSESSORS_TAG">XNAT_ASSESSORS_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_CT_SCAN">XNAT_CT_SCAN (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_EXPERIMENTS_TAG">XNAT_EXPERIMENTS_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_FILE_TAG">XNAT_FILE_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_IMAGE_SCAN_DATA_TAG">XNAT_IMAGE_SCAN_DATA_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_IMAGE_SESSION_ID">XNAT_IMAGE_SESSION_ID (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_MODALITY_TAG">XNAT_MODALITY_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_MR_SCAN">XNAT_MR_SCAN (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_OTHER_SCAN">XNAT_OTHER_SCAN (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_OUT_TAG">XNAT_OUT_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PREARCHIVE_PATH_TAG">XNAT_PREARCHIVE_PATH_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PROJECT_ID_ATTR">XNAT_PROJECT_ID_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PROJECT_NAME_TAG">XNAT_PROJECT_NAME_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_RESOURCES_TAG">XNAT_RESOURCES_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_SCAN_ID_ATTR">XNAT_SCAN_ID_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_SCANS_TAG">XNAT_SCANS_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_SESSION_ID_ATTR">XNAT_SESSION_ID_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_SHARING_TAG">XNAT_SHARING_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_SUBJECT_ID">XNAT_SUBJECT_ID (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_SUBJECT_ID_ATTR">XNAT_SUBJECT_ID_ATTR (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor">XnatAssessor (class in copyxnat.xnat.xnat_interface)</a>
 </li>
@@ -798,6 +786,8 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment">XnatExperiment (class in copyxnat.xnat.xnat_interface)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem">XnatItem (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem">XnatParentItem (class in copyxnat.xnat.xnat_interface)</a>
@@ -815,6 +805,8 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServerParams">XnatServerParams (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject">XnatSubject (class in copyxnat.xnat.xnat_interface)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType">XnatType (class in copyxnat.xnat.xml_cleaner)</a>
 </li>
   </ul></td>
 </tr></table>
