--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -43,55 +43,92 @@
 <span class="sd">&quot;&quot;&quot;Remove and remap XML tags for xml transfer between XNAT servers&quot;&quot;&quot;</span>
 
 
+<span class="kn">from</span> <span class="nn">enum</span> <span class="kn">import</span> <span class="n">Enum</span>
 <span class="kn">from</span> <span class="nn">xml.etree.cElementTree</span> <span class="kn">import</span> <span class="n">register_namespace</span><span class="p">,</span> <span class="n">XML</span>
+
+
+<div class="viewcode-block" id="XnatType"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType">[docs]</a><span class="k">class</span> <span class="nc">XnatType</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;Describe the type of XNAT item so cleaning can be performed&quot;&quot;&quot;</span>
+
+    <span class="n">project</span> <span class="o">=</span> <span class="s1">&#39;project&#39;</span>
+    <span class="n">subject</span> <span class="o">=</span> <span class="s1">&#39;subject&#39;</span>
+    <span class="n">experiment</span> <span class="o">=</span> <span class="s1">&#39;experiment&#39;</span>
+    <span class="n">scan</span> <span class="o">=</span> <span class="s1">&#39;scan&#39;</span>
+    <span class="n">assessor</span> <span class="o">=</span> <span class="s1">&#39;assessor&#39;</span>
+    <span class="n">reconstruction</span> <span class="o">=</span> <span class="s1">&#39;reconstruction&#39;</span>
+    <span class="n">resource</span> <span class="o">=</span> <span class="s1">&#39;resource&#39;</span></div>
 
 
 <div class="viewcode-block" id="XmlCleaner"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner">[docs]</a><span class="k">class</span> <span class="nc">XmlCleaner</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Remove and remap XML tags for xml transfer between XNAT servers&quot;&quot;&quot;</span>
 
-    <span class="n">ICR_SUBJECT_ID_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://icr.ac.uk/icr}subjectID&#39;</span>
-    <span class="n">XNAT_IMAGE_SESSION_ID</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}image_session_ID&#39;</span>
-    <span class="n">XNAT_SUBJECT_ID</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}subject_ID&#39;</span>
-    <span class="n">XNAT_OUT_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}out&#39;</span>
-    <span class="n">XNAT_EXPERIMENTS_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}experiments&#39;</span>
-    <span class="n">XNAT_SCANS_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scans&#39;</span>
-    <span class="n">XNAT_RESOURCES_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}resources&#39;</span>
-    <span class="n">XNAT_ASSESSORS_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}assessors&#39;</span>
-    <span class="n">XNAT_PREARCHIVE_PATH_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}prearchivePath&#39;</span>
-    <span class="n">XNAT_SHARING_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}sharing&#39;</span>
-    <span class="n">XNAT_FILE_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}file&#39;</span>
     <span class="n">XNAT_MODALITY_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}modality&#39;</span>
     <span class="n">XNAT_PROJECT_NAME_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}name&#39;</span>
 
     <span class="n">ATTR_SECONDARY_PROJECT_ID</span> <span class="o">=</span> <span class="s1">&#39;secondary_ID&#39;</span>
 
     <span class="n">XNAT_IMAGE_SCAN_DATA_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageScanData&#39;</span>
-    <span class="n">XNAT_MR_SCAN</span> <span class="o">=</span> <span class="s1">&#39;xnat:MRScan&#39;</span>
-    <span class="n">XNAT_CT_SCAN</span> <span class="o">=</span> <span class="s1">&#39;xnat:CTScan&#39;</span>
     <span class="n">XNAT_OTHER_SCAN</span> <span class="o">=</span> <span class="s1">&#39;xnat:OtherDicomScan&#39;</span>
 
-    <span class="n">XNAT_PROJECT_ID_ATTR</span> <span class="o">=</span> <span class="s1">&#39;XNAT_PROJECT_ID_ATTR&#39;</span>
-    <span class="n">XNAT_SUBJECT_ID_ATTR</span> <span class="o">=</span> <span class="s1">&#39;XNAT_SUBJECT_ID_ATTR&#39;</span>
-    <span class="n">XNAT_SESSION_ID_ATTR</span> <span class="o">=</span> <span class="s1">&#39;XNAT_SESSION_ID_ATTR&#39;</span>
-    <span class="n">XNAT_SCAN_ID_ATTR</span> <span class="o">=</span> <span class="s1">&#39;XNAT_SCAN_ID_ATTR&#39;</span>
-    <span class="n">XNAT_ASSESSOR_LABEL_ATTR</span> <span class="o">=</span> <span class="s1">&#39;XNAT_ASSESSOR_LABEL_ATTR&#39;</span>
-    <span class="n">XNAT_ASSESSOR_PROJECT_ATTR</span> <span class="o">=</span> <span class="s1">&#39;XNAT_ASSESSOR_PROJECT_ATTR&#39;</span>
+    <span class="c1"># Index names for the maps which store the before-&gt;after values</span>
+    <span class="n">PROJECT_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;PROJECT_ID_MAP&#39;</span>
+    <span class="n">SUBJECT_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;SUBJECT_ID_MAP&#39;</span>
+    <span class="n">SESSION_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;SESSION_ID_MAP&#39;</span>
+    <span class="n">SCAN_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;SCAN_ID_MAP&#39;</span>
+    <span class="n">ASSESSOR_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;ASSESSOR_ID_MAP&#39;</span>
+    <span class="n">RECONSTRUCTION_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;RECONSTRUCTION_ID_MAP&#39;</span>
 
     <span class="n">TAGS_TO_REMAP</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="n">ICR_SUBJECT_ID_TAG</span><span class="p">:</span> <span class="n">XNAT_SUBJECT_ID_ATTR</span><span class="p">,</span>
-        <span class="n">XNAT_SUBJECT_ID</span><span class="p">:</span> <span class="n">XNAT_SUBJECT_ID_ATTR</span><span class="p">,</span>
-        <span class="n">XNAT_IMAGE_SESSION_ID</span><span class="p">:</span> <span class="n">XNAT_SESSION_ID_ATTR</span>
+        <span class="s1">&#39;{http://icr.ac.uk/icr}subjectID&#39;</span><span class="p">:</span> <span class="n">SUBJECT_ID_MAP</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}subject_ID&#39;</span><span class="p">:</span> <span class="n">SUBJECT_ID_MAP</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}image_session_ID&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageSession_ID&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}session_id&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scanID&#39;</span><span class="p">:</span> <span class="n">SCAN_ID_MAP</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageScan_ID&#39;</span><span class="p">:</span> <span class="n">SCAN_ID_MAP</span>
     <span class="p">}</span>
 
+    <span class="n">ATTRS_TO_REMAP</span> <span class="o">=</span> <span class="p">{</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">project</span><span class="p">:</span> <span class="p">{</span>
+            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">subject</span><span class="p">:</span> <span class="p">{</span>
+            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">SUBJECT_ID_MAP</span><span class="p">,</span>
+            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span><span class="p">:</span> <span class="p">{</span>
+            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
+            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">scan</span><span class="p">:</span> <span class="p">{</span>
+            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">SCAN_ID_MAP</span><span class="p">,</span>
+            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">assessor</span><span class="p">:</span> <span class="p">{</span>
+            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">ASSESSOR_ID_MAP</span><span class="p">,</span>
+            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">reconstruction</span><span class="p">:</span> <span class="p">{</span>
+            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">RECONSTRUCTION_ID_MAP</span><span class="p">,</span>
+            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">resource</span><span class="p">:</span> <span class="p">{</span>
+        <span class="p">}</span>
+    <span class="p">}</span>
+
+<div class="viewcode-block" id="XmlCleaner.get_tags_to_remap"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.get_tags_to_remap">[docs]</a>    <span class="k">def</span> <span class="nf">get_tags_to_remap</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Return a map of attribute mappings for this xnat item type&quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">ATTRS_TO_REMAP</span><span class="p">[</span><span class="n">xnat_type</span><span class="p">]</span></div>
+
     <span class="n">TAGS_TO_DELETE</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="n">XNAT_OUT_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_EXPERIMENTS_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_SCANS_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_RESOURCES_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_ASSESSORS_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_PREARCHIVE_PATH_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_SHARING_TAG</span><span class="p">,</span>
-        <span class="n">XNAT_FILE_TAG</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}out&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}experiments&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scans&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}resources&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}assessors&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}prearchivePath&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}sharing&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}file&#39;</span>
     <span class="p">}</span>
 
     <span class="n">MODALITY_TO_SCAN</span> <span class="o">=</span> <span class="p">{</span>
@@ -156,16 +193,17 @@
             <span class="n">child</span><span class="o">.</span><span class="n">text</span> <span class="o">=</span> <span class="n">new_name</span>
         <span class="k">return</span> <span class="n">xml_root</span></div>
 
-<div class="viewcode-block" id="XmlCleaner.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">attr_to_tag_map</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">):</span>
+<div class="viewcode-block" id="XmlCleaner.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Remove or XML remap tags that change between XNAT servers</span>
 
 <span class="sd">        @param xml_root: ElementTree root of the XML to remap</span>
-<span class="sd">        @param attr_to_tag_map: dict of attribute names in the root element to</span>
 <span class="sd">        @param xnat_type: Enumeration describing the type of XNAT item</span>
 <span class="sd">        @param fix_scan_types: set to True to correct ambiguous scan types</span>
 <span class="sd">        @return:</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">attr_to_tag_map</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_tags_to_remap</span><span class="p">(</span><span class="n">xnat_type</span><span class="p">)</span>
+
         <span class="c1"># Delete all attributes that change on dest server</span>
         <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">attr_to_tag_map</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">:</span>
@@ -205,14 +243,15 @@
 
         <span class="k">return</span> <span class="n">xml_root</span></div>
 
-<div class="viewcode-block" id="XmlCleaner.add_tag_remaps"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">[docs]</a>    <span class="k">def</span> <span class="nf">add_tag_remaps</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_xml_root</span><span class="p">,</span> <span class="n">dst_xml_root</span><span class="p">,</span> <span class="n">attr_to_tag_map</span><span class="p">):</span>
+<div class="viewcode-block" id="XmlCleaner.add_tag_remaps"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">[docs]</a>    <span class="k">def</span> <span class="nf">add_tag_remaps</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_xml_root</span><span class="p">,</span> <span class="n">dst_xml_root</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Update the remapping dictionary to add add before and after values</span>
 <span class="sd">        for the tags in the map</span>
-<span class="sd">        @param src_xml_root:</span>
-<span class="sd">        @param dst_xml_root:</span>
-<span class="sd">        @param attr_to_tag_map:</span>
+<span class="sd">        @param src_xml_root: the original XML</span>
+<span class="sd">        @param dst_xml_root: the XML after XNAT has assigned variables</span>
+<span class="sd">        @param xnat_type: Enumeration describing the type of XNAT item</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">attr_to_tag_map</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_tags_to_remap</span><span class="p">(</span><span class="n">xnat_type</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">attr</span><span class="p">,</span> <span class="n">global_attr_name</span> <span class="ow">in</span> <span class="n">attr_to_tag_map</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="k">if</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">src_xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">:</span>
                 <span class="n">attr_dict</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">tag_values</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">global_attr_name</span><span class="p">,</span> <span class="p">{})</span>
