--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -47,7 +47,7 @@
 
 <span class="kn">import</span> <span class="nn">urllib3</span>
 
-<span class="kn">from</span> <span class="nn">copyxnat.xnat.xml_cleaner</span> <span class="kn">import</span> <span class="n">XmlCleaner</span>
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.xml_cleaner</span> <span class="kn">import</span> <span class="n">XmlCleaner</span><span class="p">,</span> <span class="n">XnatType</span>
 
 
 <div class="viewcode-block" id="XnatBase"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase">[docs]</a><span class="k">class</span> <span class="nc">XnatBase</span><span class="p">(</span><span class="n">abc</span><span class="o">.</span><span class="n">ABC</span><span class="p">):</span>
@@ -295,9 +295,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">write_xml</span><span class="p">(</span><span class="n">final_xml_root</span><span class="p">,</span>
                                   <span class="bp">self</span><span class="o">.</span><span class="n">_xml_filename</span> <span class="o">+</span> <span class="s1">&#39;.new.xml&#39;</span><span class="p">)</span>  <span class="c1"># pylint: disable=no-member</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">add_tag_remaps</span><span class="p">(</span><span class="n">src_xml_root</span><span class="p">,</span>
-                                        <span class="n">final_xml_root</span><span class="p">,</span>
-                                        <span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">)</span>  <span class="c1"># pylint: disable=no-member</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">add_tag_remaps</span><span class="p">(</span><span class="n">src_xml_root</span><span class="o">=</span><span class="n">src_xml_root</span><span class="p">,</span>
+                                        <span class="n">dst_xml_root</span><span class="o">=</span><span class="n">final_xml_root</span><span class="p">,</span>
+                                        <span class="n">xnat_type</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_xml_id</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
+                                        <span class="p">)</span>
         <span class="k">return</span> <span class="n">output</span></div>
 
 <div class="viewcode-block" id="XnatParentItem.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">,</span> <span class="n">destination_parent</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>  <span class="c1"># pylint: disable=unused-argument</span>
@@ -313,7 +314,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span>
             <span class="n">xml_root</span><span class="o">=</span><span class="n">xml_root</span><span class="p">,</span>
-            <span class="n">attr_to_tag_map</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
+            <span class="n">xnat_type</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_xml_id</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
             <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="XnatParentItem.export"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.export">[docs]</a>    <span class="k">def</span> <span class="nf">export</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -327,7 +328,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Project&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_project.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;projects&#39;</span>
-    <span class="n">_remap_attrs</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_PROJECT_ID_ATTR</span><span class="p">}</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">project</span>
 
 <div class="viewcode-block" id="XnatProject.get_child_items"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.get_child_items">[docs]</a>    <span class="k">def</span> <span class="nf">get_child_items</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">subjects</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatSubject</span><span class="p">(</span><span class="n">parent_cache</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="p">,</span>
@@ -350,7 +351,7 @@
 
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span>
             <span class="n">xml_root</span><span class="o">=</span><span class="n">cleaned_xml_root</span><span class="p">,</span>
-            <span class="n">attr_to_tag_map</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_remap_attrs</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
+            <span class="n">xnat_type</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_xml_id</span><span class="p">,</span>  <span class="c1"># pylint: disable=no-member</span>
             <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">)</span></div></div>
 
 
@@ -360,8 +361,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Subject&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_subject.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;subjects&#39;</span>
-    <span class="n">_remap_attrs</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_SUBJECT_ID_ATTR</span><span class="p">,</span>
-                    <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_PROJECT_ID_ATTR</span><span class="p">}</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">subject</span>
 
 <div class="viewcode-block" id="XnatSubject.get_child_items"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject.get_child_items">[docs]</a>    <span class="k">def</span> <span class="nf">get_child_items</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">experiments</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatExperiment</span><span class="p">(</span><span class="n">parent_cache</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="p">,</span>
@@ -379,8 +379,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Experiment&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_session.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;experiments&#39;</span>
-    <span class="n">_remap_attrs</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_SESSION_ID_ATTR</span><span class="p">,</span>
-                    <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_PROJECT_ID_ATTR</span><span class="p">}</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span>
 
 <div class="viewcode-block" id="XnatExperiment.get_child_items"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.get_child_items">[docs]</a>    <span class="k">def</span> <span class="nf">get_child_items</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
         <span class="n">scans</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatScan</span><span class="p">(</span><span class="n">parent_cache</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="p">,</span>
@@ -414,8 +413,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Scan&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_scan.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;scans&#39;</span>
-    <span class="n">_remap_attrs</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_SCAN_ID_ATTR</span><span class="p">,</span>
-                    <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_PROJECT_ID_ATTR</span><span class="p">}</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">scan</span>
 
 <div class="viewcode-block" id="XnatScan.get_child_items"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatScan.get_child_items">[docs]</a>    <span class="k">def</span> <span class="nf">get_child_items</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">[]</span></div></div>
@@ -427,8 +425,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Assessor&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;assessors&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_assessor.xml&#39;</span>
-    <span class="n">_remap_attrs</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;label&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_ASSESSOR_LABEL_ATTR</span><span class="p">,</span>
-                    <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">XNAT_ASSESSOR_PROJECT_ATTR</span><span class="p">}</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">assessor</span>
 
 <div class="viewcode-block" id="XnatAssessor.get_child_items"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor.get_child_items">[docs]</a>    <span class="k">def</span> <span class="nf">get_child_items</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">[]</span></div></div>
@@ -440,7 +437,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Reconstruction&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;reconstructions&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_reconstruction.xml&#39;</span>
-    <span class="n">_remap_attrs</span> <span class="o">=</span> <span class="p">{}</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">reconstruction</span>
 
 <div class="viewcode-block" id="XnatReconstruction.get_child_items"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatReconstruction.get_child_items">[docs]</a>    <span class="k">def</span> <span class="nf">get_child_items</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">[]</span></div></div>
@@ -450,6 +447,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper for access to an XNAT resource&quot;&quot;&quot;</span>
 
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Resource&#39;</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">resource</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;resources&#39;</span>
 
 <div class="viewcode-block" id="XnatResource.duplicate"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatResource.duplicate">[docs]</a>    <span class="k">def</span> <span class="nf">duplicate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">destination_parent</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">,</span> <span class="n">dst_label</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
